<resources>
    <string name="app_name">UseTradeMarket</string>
    <string name="signup">회원 가입</string>
    <string name="is_not_valide_email">이메일 형식이 정확하지 않습니다.</string>
    <string name="is_not_valid_name">이름은 2자 이상 20자 이하로 입력해주세요.</string>
    <string name="is_not_valid_password">비밀번호는 8자 이상 20자 이하로 입력해주세요.</string>
    <string name="success_sign_up">회원가입에 성공하였습니다. 로그인 후 이용해 주세요.</string>
    <string name="error">알 수 없는 오류가 발생하였습니다.</string>
    <string name="please_enter_email">Email 을 입력해주세요.</string>
    <string name="please_enter_name">Name은 2자 이상 20자 이하입니다.</string>
    <string name="please_enter_password">Password는 8자 이상 20자 이하입니다.</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">로그인</string>
    <string name="hint_password">비밀번호를 입력하세요.</string>
    <string name="search">검색</string>
    <string name="drawer_open">열기</string>
    <string name="drawer_close">닫기</string>
    <string name="logout">로그아웃</string>
    <string name="my_inquiry">내 문의</string>
    <string name="my_product">내 상품</string>
    <string name="home">홈</string>
    <string name="like">like</string>
    <string name="my">my</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration_product">상품 등록</string>
    <string name="confirm">확인</string>
    <string name="product_name">상품명:</string>
    <string name="product_name_constraint">1자 이상 40자 이하로 작성해주세요.</string>
    <string name="product_description">상품 설명</string>
    <string name="category">카테고리</string>
    <string name="product_price">판매 가격</string>
    <string name="product_name_and_description">상품명 및 설명</string>
    <string name="product_registration_image">상품 이미지 등록</string>
    <string name="product_detail_info">상품 상세 정보</string>
    <string name="product_question">문의하기</string>
    <string name="search_product_empty">검색된 상품이 없습니다.</string>
    <string name="answer">답변</string>
    <string name="q">Q.</string>
    <string name="a">A.</string>
    <string name="product_inquiry">문의하기</string>
    <string name="empty_inquiry">상품 문의가 없습니다.</string>
    <string name="content_inquiry">문의 내용</string>
    <string name="registration">등록하기</string>
    <string name="seller">판매자 : </string>
    <string name="empty_basket">장바구니 목록이 없습니다.</string>
    <string name="sellerName">판매자 :</string>
    <string name="add_basket">장바구니 추가</string>
    <string name="empty_my_product">내 상품이 없습니다.</string>
    <string name="login_info">로그인 정보</string>
    <string name="nick_name">Nick-Name</string>
</resources>