<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.example.usetrademarket.data.model.response.InquiryResponse" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{item.requestUserName}"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/black"
                android:text="@string/q"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@{item.question}"
                tools:text="답변을 주시면 답변이 될 것 같아요"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@{item.productName}"
                tools:text="휴대폰 무선 충전 거치대"/>
        </LinearLayout>

        <Button
            android:id="@+id/answerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_gravity="end" />

        <LinearLayout
            android:id="@+id/answerWrapper"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                tools:text="홍길동"
                android:text="@{item.productOwnerName}"
                android:textColor="@color/black"/>

            <LinearLayout
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/answerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    tools:text="물어볼 것이 있어요."
                    android:text="@{item.answer}"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:background="@color/gray"/>

    </LinearLayout>
</layout>